--- a/user/templates/user/tracker.html
+++ b/user/templates/user/tracker.html
@@ -36,13 +36,13 @@ body {
         <div class="col my-4">
             <h2>Your Order Status</h2>
             <div class="my-4">
-                <ul class="list-group items">
-                    Enter your order id and email and click Track Order to find details about your order!
+                <ul class="list-group items" style="color: black">
+                    <span style="color: white">Enter your order id and email and click Track Order to find details about your order!</span>
                 </ul>
             </div>
             <h2>Your Order Details</h2>
             <div class="my-4">
-                <ul class="list-group citems">
+                <ul class="list-group citems" style="color: black">
                 </ul>
             </div>
         </div>
@@ -52,6 +52,7 @@ body {
 {% block js %}
 <script type="text/javascript">
 $('#trackerForm').submit(function(event) {
+
     $('.items').empty();
     var formData = {
         'OrderId': $('input[name=OrderId]').val(),
@@ -65,6 +66,7 @@ $('#trackerForm').submit(function(event) {
             encode: true
         })
         .done(function(data) {
+          console.log(data);
             data = JSON.parse(data);
             updates = data[0];
             if (updates.length > 0 & updates !== {}) {
@@ -81,9 +83,11 @@ $('#trackerForm').submit(function(event) {
             }
             // Fill the order details
             cat_cart = JSON.parse(data[1]);
-            for (item in cart) {
+            // console.log(cat_cart);
+            for (item in cat_cart) {
                 let name = cat_cart[item][1];
                 let qty = cat_cart[item][0];
+                console.log(name,qty);
                 mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">${name}<span class="badge badge-primary badge-pill">${qty}</span></li>`;
                 $('.citems').append(mystr);
             }
